# SITS-NN-Classification

./: .gitignore  README.md  classification.py  count_date.py  dataset.ipynb  dataset.py  eolab_extract.R  gee_extract.py  gee_extract_modified.py  inference.py  inference_landshut_local.py  lstm_classification_tuning.py  merge_csv.py  minibatch_eolab_FORCE_shapefiles.R  multilabel_prepare_dataset.R  neuron_network.ipynb  pre_process.py  pyproject.toml  reference.ipynb  reference.py  s2_data.py  test.py  train_grid.sh  transformer_classification_pixelbased_tuning.py  transformer_model.ipynb
Eolab/: eolab_extract.R  inference.py
apps/: forest-mask.sh  inference.py  lstm_classification_tuning.py  transformer_classification.py  transformer_classification_multilabel.py  transformer_classification_pixelbased_tuning.py
models/: __init__.py  lstm.py  transformer.py
neuron_network/: lstm_classification.py  lstm_classification_tuning.py  lstm_color_map.py  lstm_multi_label.py  lstm_regression.py  lstm_symbol_map.py  lstm_val_map.py  transformer_classification.py  transformer_color_map.py  transformer_multi_label.py  transformer_regression.py  transformer_symbol_map.py  transformer_val_map.py
notebook/: classification.ipynb  lstm.ipynb  multi-label.ipynb  reference.ipynb  regression.ipynb  s2_data.ipynb  transformer.ipynb
preprocessing/: eolab_extract_polygons.R  multilabel_prepare_dataset.R  reshape_timeseries_multilabel.R
sits_classifier/: transformer_classification_pixelbased_tuning.py
sits_classifier/models/: lstm.py  transformer.py
sits_classifier/utils/: captum.py  create_dataset.py  create_multilabel_dataset.py  create_tuning_grid.py  csv.py  (+4 more)
training/: transformer_classification.py
utils/: __init__.py  create_dataset.py  create_multilabel_dataset.py  create_tuning_grid.py  csv.py  csv_func.py  dataset.py  plot.py  shp.py  tif_to_numpy.py  tuning_grid_lstm.py  validation.py
(+80 files in other folders)
