[tool.poetry]
name = "sits-classification"
version = "0.1.0"
description = ""
authors = ["Jonathan Költzow <jonathan.koeltzow@fu-berlin.de>", "Florian Katerndahl <florian.katerndahl@fu-berlin.de>"]
maintainers = ["Florian Katerndahl <florian.katerndahl@fu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
rasterio = "^1.3.9"
shapely = "^2.0.2"
numpy = "^1.26.1"
rioxarray = "^0.15.0"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
geopandas = "^0.14.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
