[tool.poetry]
name = "sits-classification"
version = "0.1.0"
description = ""
authors = ["Jonathan Költzow <jonathan.koeltzow@fu-berlin.de>", "Florian Katerndahl <florian.katerndahl@fu-berlin.de>"]
maintainers = ["Florian Katerndahl <florian.katerndahl@fu-berlin.de>"]
repository = "https://github.com/Florian-Katerndahl/sits-classification"
packages = [
    { include = "sits_classifier" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
rasterio = "^1.3.9"
shapely = "^2.0.2"
numpy = "^1.26.1"
rioxarray = "^0.15.0"
geopandas = "^0.14.0"
dask = "^2023.11.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
torchmetrics = "^1.2.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
